<resources>
    <string name="app_name">FirstApp</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="message">MESSAGE</string>
    <string name="history">HISTORY</string>
    <string name="location">LOCATION</string>
    <string name="photo">PHOTO</string>
    <string name="version">0.0.1</string>
    <string name="shop">SHOP</string>
    <string name="favorites">FAVORITES</string>
    <string name="contact">CONTACT</string>
    <string name="main">MAIN</string>
    <string name="video">VIDEO</string>
    <string name="settings">SETTINGS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_name">ELDEN RING</string>
    <string name="select">select</string>
    <string name="difficulty">VERY HARD</string>
</resources>