<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/message"
        android:title="@string/message"
        android:icon="@drawable/message"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/history"
        app:showAsAction="ifRoom"/>

</menu>